# Filtering_Techniques

./: README.md  data.mat  grdtruth.mat  main  run.sh  simulate  state_estimates.mat  visualize
data/: groundTruth.mat  measurementData.mat
dataSimulator/: CMakeLists.txt  GenLinearStateSequences.cpp  GenLinearStateSequences.h  Mvn.cpp  Mvn.h  test_data_sim.cpp
dataSimulator/src/: GenLinearMeasurementSequences.cpp  GenLinearMeasurementSequences.h  GenLinearStateSequences.cpp  GenLinearStateSequences.h  test_data_sim.cpp
dataSimulator/utilities/: Mvn.cpp  Mvn.h
kalmanFilter/: CMakeLists.txt  kalmanFilter.cpp
kalmanFilter/measurement_models/: BearingMeasurementModel.cpp  BearingMeasurementModel.h  CMakeLists.txt  CtMeasurementModel.cpp  CtMeasurementModel.h  CvMeasurementModel.cpp  CvMeasurementModel.h  DualBearingMeasModel.cpp  DualBearingMeasModel.h  MeasurementModelInterface.h  RangeBearingMeasModel.cpp  RangeBearingMeasModel.h  test_meas.cpp
kalmanFilter/motion_models/: .ConstantVelocityModel.h.swp  .test_main.cpp.swp  CMakeLists.txt  ConstantVelocityModel.cpp  ConstantVelocityModel.h  CoordinatedTurnModel.cpp  CoordinatedTurnModel.h  MotionModelInterface.h  test_main.cpp
kalmanFilter/test/motion_models/: ConstantVelocityModelTest.cpp
mainApp/: CMakeLists.txt
mainApp/src/: main.cpp
matlab_simulator/linear_simulator/: kf_simulate  kf_visualize
matlab_simulator/linear_simulator/matlab_data/: grdtruth.mat  measData.mat  stateEstimates.mat
matlab_simulator/non_linear_simulator/: coordinatedTurnMotion.m  ekf_simulate.m  ekf_visualize.m  genNonLinearMeasurementSequence.m  genNonLinearStateSequence.m  sigmaEllipse2D.m  visualize.m
matlab_simulator/non_linear_simulator/matlab_data/: grdtruth.mat  measData.mat  stateEstimates.mat  unfilteredPos.mat
stateEstimation/: CMakeLists.txt
stateEstimation/filters/: CMakeLists.txt
stateEstimation/filters/src/: EKFAdapter.cpp  FilterInterface.h  KFAdapter.cpp  KFAdapter.h  ParticleFilter.cpp  ParticleFilter.h  test_kf.cpp  test_pf.cpp  utility_functions.h
stateEstimation/measurement_models/src/: CvMeasurementModel.h  DualBearingMeasModel.cpp  MeasurementModelInterface.h  RangeBearingMeasModel.cpp
stateEstimation/motion_models/: ConstantVelocityModel.cpp  ConstantVelocityModel.h  CoordinatedTurnModel.cpp  MotionModelInterface.h  test_main.cpp
stateEstimation/motion_models/src/: ConstantVelocityModel.cpp  MotionModelInterface.h
